--- a/.github/flux de travail/main.yml
+++ b/.github/flux de travail/main.yml
@@ -22,8 +22,8 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: kadmiel
+          password: ${{ kadmiel }}
       -
         name: Build and push
         uses: docker/build-push-action@v4
